--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,13 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/app/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@aside/*": ["src/aside/*"],
+      "@main/*": ["src/main/*"],
+      "@icons/*": ["src/icons/*"],
+    }
+  }
 }
